<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="#0DFFFFFF"
    android:backgroundTintMode="src_over"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginTop="20sp"
                    android:contentDescription="@string/indian_flag"
                    android:src="@drawable/india" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/india"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/score_india"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:text="@string/zero"
                        android:textColor="#FFFFFF"
                        android:textSize="56sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:text="@string/slash"
                        android:textColor="#FFFFFF"
                        android:textSize="56sp" />

                    <TextView
                        android:id="@+id/wickets_india"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:text="@string/zero"
                        android:textColor="#FFFFFF"
                        android:textSize="56sp" />

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="#dd2c00"
                    android:onClick="addOneRunIndia"
                    android:text="@string/_1_run"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="#dd2c00"
                    android:onClick="addFourRunsIndia"
                    android:text="@string/_4_run"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="#dd2c00"
                    android:onClick="addSixRunsIndia"
                    android:text="@string/_6_run"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="#dd2c00"
                    android:onClick="outIndia"
                    android:text="@string/out"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="#9f0000" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginTop="20sp"
                    android:contentDescription="@string/australian_flag"
                    android:src="@drawable/australia" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/australia"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/score_australia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:text="@string/zero"
                        android:textColor="#FFFFFF"
                        android:textSize="56sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:text="@string/slash"
                        android:textColor="#FFFFFF"
                        android:textSize="56sp" />

                    <TextView
                        android:id="@+id/wicket_australia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:paddingBottom="15dp"
                        android:text="@string/zero"
                        android:textColor="#FFFFFF"
                        android:textSize="56sp" />
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="#dd2c00"
                    android:onClick="addOneRunAustralia"
                    android:text="@string/_1_run"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="#dd2c00"
                    android:onClick="addFourRunsAustralia"
                    android:text="@string/_4_run"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="#dd2c00"
                    android:onClick="addSixRunsAustralia"
                    android:text="@string/_6_run"
                    android:textColor="@android:color/white" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:background="#dd2c00"
                    android:onClick="outAustralia"
                    android:text="@string/out"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:background="#870000"
            android:onClick="reset"
            android:text="@string/reset"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp"
            android:background="#870000"
            android:onClick="finish"
            android:text="@string/finish"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>
